sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:11: error: ';' expected but ')' found.
      echange(I-1,I))
                    ^